funtion for adding photos from Unsplash

--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
         <img src="loader.svg" alt="loading">
     </div>
     <!-- Image Container -->
-    <div class="img-container" id="img-container">
-        <img src="https://images.unsplash.com/photo-1475924156734-496f6cac6ec1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1475924156734-496f6cac6ec1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1475924156734-496f6cac6ec1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="">
-    </div>
+    <div class="img-container" id="img-container"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
