--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Title -->
     <h1>Unsplash Images - Infinite Scroll</h1>
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
+    <div class="loader" id="loader">
         <img src="loader.svg" alt="loading">
     </div>
     <!-- Image Container -->
