--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Infinite Scroll</title>
-    <link type="image/png" sizes="16x16" rel="icon" href="favicon.png">
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Title -->
-    <h1>Unsplash Images - Infinite Scroll</h1>
+    <h1>Unsplash API - Infinite Scroll</h1>
     <!-- Loader -->
     <div class="loader" id="loader">
-        <img src="loader.svg" alt="loading">
+        <img src="loader.svg" alt="Loading">
     </div>
     <!-- Image Container -->
-    <div class="img-container" id="img-container"></div>
+    <div class="image-container" id="image-container"></div>
     <!-- Script -->
     <script src="script.js"></script>
 </body>
